test/unique/neg/capture-rhs-not-unique.check
capture-rhs-not-unique.scala:11: error: capability of first argument not available
    capture(x, y)
           ^
one error found
